feat: update routing documentation
